# Lyrics-Acquisition-Engine

./: Cargo.toml  README.md
src/: lib.rs  lyrics.rs  main.rs  metadata.rs  scanner.rs  writer.rs
