[package]
name = "lyrics-acquisition-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
id3 = "1.17.0"
lofty = "=0.24.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }